Added functionality for popups using JS

--- a/Popup/index.html
+++ b/Popup/index.html
@@ -23,6 +23,13 @@
     <script>
         let popup = document.getElementById("popup");
 
+        function openPopup() {
+            popup.classList.add("open-popup")
+        }
+
+        function closePopup() {
+            popup.classList.remove("open-popup")
+        }
 
     </script>
 </body>
