--- a/Dicee Challenge/dicee.html
+++ b/Dicee Challenge/dicee.html
@@ -14,12 +14,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="images/dice6.png">
       </div>
 
     </div>
@@ -30,4 +30,5 @@
   <footer>
     www 🎲 dicee  🎲 com
   </footer>
+  <script src="index.js"></script>
 </html>
