--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -35,6 +35,7 @@
 
   </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="Game.js" ></script>
 </body>
 </html>
