--- a/Drum Kit/index.html
+++ b/Drum Kit/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    © Made by Saima ❤️.
+    © Made with ❤️ by Saima.
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
