--- a/Task App/index.html
+++ b/Task App/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List App</title>
-    <link rel="stylesheet" href="task.css"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="container">
@@ -21,6 +21,6 @@
             </ul>
         </div>
     </div>
-   <script src="task.js"></script> 
+   <script src="script.js"></script> 
 </body>
 </html>
